# N-body-problem

./: .gitignore  Analysis.cpp  Analysis.h  CMakeLists.txt  Config.h  Console.cpp  Console.h  Entities.cpp  Entities.h  Files.cpp  Files.h  Loader.cpp  Loader.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h  Replay.cpp  Replay.h  UI.cpp  UI.h  Vectors.cpp  Vectors.h  main.cpp
Simulated/Analys/: Analys.nb
Simulations/: 2StarClusters.json  2body.json  Cluster_large.json  Evolution.json  StarCluster.json  Tester.bat  test.json  test2.json  test3.json  test4.json  test5.json  test6.json
include/rapidjson/: document.h
